Fix article list on small devices

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -11,7 +11,7 @@ h1 {
 
 .article-list {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 12px;
 }
 
@@ -154,4 +154,16 @@ h1 {
     background-color: transparent;
     border: 1px solid #DDDDDD;
     padding: 6px 16px;
+}
+
+@media(max-width: 1199px) {
+    .article-list {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media(max-width: 767px) {
+    .article-list {
+        grid-template-columns: 1fr;
+    }
 }
